# autopg

./: .gitignore  Dockerfile  LICENSE  README.md  bootstrap.sh  postgresql.conf  pyproject.toml  pyrightconfig.json
.github/workflows/: docker-pool.yml  docker.yml  test-pool.yml  test.yml
autopg/: cli.py  constants.py  diagnostics.py  logic.py  postgres.py  system_info.py  webapp.py
autopg/__tests__/: test_cli.py  test_docker.py  test_logic.py  test_postgres.py  test_system_info.py
autopg/static/: diagnostics.html  script.js  style.css
autopgpool/: Dockerfile  README.md  bootstrap.sh  config.example.toml  pyproject.toml
autopgpool/autopgpool/: cli.py  config.py  env.py  ini_writer.py
autopgpool/autopgpool/__tests__/: conftest.py  test_cli.py  test_config.py  test_docker.py  test_env.py  test_ini_writer.py
benchmarks/: Dockerfile.benchmark  README.md  docker-compose.yml  pg_hba.conf  postgres-init.sql  postgresql.conf  pyproject.toml
benchmarks/benchmarks/: __init__.py  cli.py  database.py  insertion.py  seqscan.py  utils.py
