[project]
name = "autopg"
version = "0.1.0"
description = "Autotune PostgreSQL for your system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
]

[project.scripts]
autopg = "autopg.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "psycopg2>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
