[project]
name = "autopg"
version = "0.1.0"
description = "Autotune PostgreSQL for your system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psycopg>=3.2.5",
    "pygments>=2.17.0",
    "sqlparse>=0.4.0",
]

[project.scripts]
autopg = "autopg.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "psycopg>=3.2.5",
    "tomli-w>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
