[project]
name = "benchmarks"
version = "0.1.0"
description = "AutoPG Database Benchmarking Suite - Load testing tools for PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
    "psycopg>=3.2.5",
]

[project.scripts]
autopg-bench = "benchmarks.cli:cli"
